tests/ui/abi/simd-abi-checks-s390x.z13_soft_float.stderr
warning: unstable feature specified for `-Ctarget-feature`: `vector`
   |
   = note: this feature is not stably supported; its behavior can change in the future

warning: unknown and unstable feature specified for `-Ctarget-feature`: `soft-float`
   |
   = note: it is still passed through to the codegen backend, but use of this feature might be unsound and the behavior of this feature can change in the future
   = help: consider filing a feature request

error: this function definition uses SIMD vector type `i8x8` which (with the chosen ABI) requires the `vector` target feature, which is not enabled
  --> $DIR/simd-abi-checks-s390x.rs:38:1
   |
LL | extern "C" fn vector_ret_small(x: &i8x8) -> i8x8 {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function defined here
   |
   = help: consider enabling it globally (`-C target-feature=+vector`) or locally (`#[target_feature(enable="vector")]`)

error: this function definition uses SIMD vector type `i8x16` which (with the chosen ABI) requires the `vector` target feature, which is not enabled
  --> $DIR/simd-abi-checks-s390x.rs:43:1
   |
LL | extern "C" fn vector_ret(x: &i8x16) -> i8x16 {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function defined here
   |
   = help: consider enabling it globally (`-C target-feature=+vector`) or locally (`#[target_feature(enable="vector")]`)

error: this function definition uses SIMD vector type `TransparentWrapper<i8x8>` which (with the chosen ABI) requires the `vector` target feature, which is not enabled
  --> $DIR/simd-abi-checks-s390x.rs:89:1
   |
LL | / extern "C" fn vector_transparent_wrapper_ret_small(
LL | |     x: &TransparentWrapper<i8x8>,
LL | | ) -> TransparentWrapper<i8x8> {
   | |_____________________________^ function defined here
   |
   = help: consider enabling it globally (`-C target-feature=+vector`) or locally (`#[target_feature(enable="vector")]`)

error: this function definition uses SIMD vector type `TransparentWrapper<i8x16>` which (with the chosen ABI) requires the `vector` target feature, which is not enabled
  --> $DIR/simd-abi-checks-s390x.rs:96:1
   |
LL | / extern "C" fn vector_transparent_wrapper_ret(
LL | |     x: &TransparentWrapper<i8x16>,
LL | | ) -> TransparentWrapper<i8x16> {
   | |______________________________^ function defined here
   |
   = help: consider enabling it globally (`-C target-feature=+vector`) or locally (`#[target_feature(enable="vector")]`)

error: this function definition uses SIMD vector type `i8x8` which (with the chosen ABI) requires the `vector` target feature, which is not enabled
  --> $DIR/simd-abi-checks-s390x.rs:111:1
   |
LL | extern "C" fn vector_arg_small(x: i8x8) -> i64 {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function defined here
   |
   = help: consider enabling it globally (`-C target-feature=+vector`) or locally (`#[target_feature(enable="vector")]`)

error: this function definition uses SIMD vector type `i8x16` which (with the chosen ABI) requires the `vector` target feature, which is not enabled
  --> $DIR/simd-abi-checks-s390x.rs:116:1
   |
LL | extern "C" fn vector_arg(x: i8x16) -> i64 {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function defined here
   |
   = help: consider enabling it globally (`-C target-feature=+vector`) or locally (`#[target_feature(enable="vector")]`)

error: this function definition uses SIMD vector type `Wrapper<i8x8>` which (with the chosen ABI) requires the `vector` target feature, which is not enabled
  --> $DIR/simd-abi-checks-s390x.rs:127:1
   |
LL | extern "C" fn vector_wrapper_arg_small(x: Wrapper<i8x8>) -> i64 {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function defined here
   |
   = help: consider enabling it globally (`-C target-feature=+vector`) or locally (`#[target_feature(enable="vector")]`)

error: this function definition uses SIMD vector type `Wrapper<i8x16>` which (with the chosen ABI) requires the `vector` target feature, which is not enabled
  --> $DIR/simd-abi-checks-s390x.rs:132:1
   |
LL | extern "C" fn vector_wrapper_arg(x: Wrapper<i8x16>) -> i64 {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function defined here
   |
   = help: consider enabling it globally (`-C target-feature=+vector`) or locally (`#[target_feature(enable="vector")]`)

error: this function definition uses SIMD vector type `TransparentWrapper<i8x8>` which (with the chosen ABI) requires the `vector` target feature, which is not enabled
  --> $DIR/simd-abi-checks-s390x.rs:143:1
   |
LL | extern "C" fn vector_transparent_wrapper_arg_small(x: TransparentWrapper<i8x8>) -> i64 {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function defined here
   |
   = help: consider enabling it globally (`-C target-feature=+vector`) or locally (`#[target_feature(enable="vector")]`)

error: this function definition uses SIMD vector type `TransparentWrapper<i8x16>` which (with the chosen ABI) requires the `vector` target feature, which is not enabled
  --> $DIR/simd-abi-checks-s390x.rs:148:1
   |
LL | extern "C" fn vector_transparent_wrapper_arg(x: TransparentWrapper<i8x16>) -> i64 {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function defined here
   |
   = help: consider enabling it globally (`-C target-feature=+vector`) or locally (`#[target_feature(enable="vector")]`)

error: aborting due to 10 previous errors; 2 warnings emitted

